[gd_scene load_steps=9 format=3 uid="uid://dojcnpqub0xwa"]

[ext_resource type="Script" uid="uid://3ihdh0qcjgeg" path="res://src/ui/main_menu.gd" id="1_btxxm"]
[ext_resource type="PackedScene" uid="uid://2q1fn1j0qqqv" path="res://scenes/ui/menu_background.tscn" id="2_wb0q5"]
[ext_resource type="Shader" uid="uid://bomwc7ier3v6e" path="res://src/shaders/sine_float.gdshader" id="3_q85j6"]
[ext_resource type="Texture2D" uid="uid://cswikx2iughtd" path="res://vfx/ui/title.png" id="4_8g5eo"]
[ext_resource type="Theme" uid="uid://kv5hrut8ubdx" path="res://vfx/dog_theme.tres" id="5_7suek"]
[ext_resource type="AudioStream" uid="uid://36ec8a4kocru" path="res://sfx/wob.mp3" id="6_otr3d"]
[ext_resource type="AudioStream" uid="uid://dysnssfudtc1i" path="res://sfx/crunch.wav" id="7_btxxm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rtw2f"]
shader = ExtResource("3_q85j6")
shader_parameter/do_abs = false
shader_parameter/do_quantize = true
shader_parameter/quantize_to = 1.0
shader_parameter/sine_amplitude = Vector2(0, 8)
shader_parameter/sine_speed = Vector2(0, 2)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_btxxm")

[node name="MenuBackground" parent="." instance=ExtResource("2_wb0q5")]
layout_mode = 1

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.0
offset_right = 177.0
offset_bottom = 272.0
grow_horizontal = 2

[node name="Control" type="Control" parent="TitleContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Title" type="TextureRect" parent="TitleContainer"]
texture_filter = 1
material = SubResource("ShaderMaterial_rtw2f")
layout_mode = 2
texture = ExtResource("4_8g5eo")

[node name="ButtonsContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.1158
offset_top = -153.11
offset_right = 101.884
offset_bottom = 149.89
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_7suek")

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsContainer"]
layout_mode = 2

[node name="Spacer3" type="Control" parent="ButtonsContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="NewGame" type="Button" parent="ButtonsContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Spacer1" type="Control" parent="ButtonsContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Settings" type="Button" parent="ButtonsContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Spacer2" type="Control" parent="ButtonsContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Exit" type="Button" parent="ButtonsContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="MouseHoverSound" type="AudioStreamPlayer2D" parent="ButtonsContainer"]
stream = ExtResource("6_otr3d")
volume_db = -6.0

[node name="ClickSound" type="AudioStreamPlayer2D" parent="ButtonsContainer"]
stream = ExtResource("7_btxxm")
volume_db = -6.0

[connection signal="mouse_entered" from="ButtonsContainer/VBoxContainer/NewGame" to="." method="_on_new_game_mouse_entered"]
[connection signal="pressed" from="ButtonsContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="ButtonsContainer/VBoxContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="ButtonsContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="ButtonsContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="ButtonsContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
